Bug 272833 - Muon can´t close, I´ve to restart the computer
Summary: Muon can´t close, I´ve to restart the computer
Status: RESOLVED FIXED
Alias: None
Product: muon
Classification: Unmaintained
Component: muon (other bugs)
Version First Reported In: unspecified
Platform: Ubuntu Linux
: NOR normal
Target Milestone: ---
Assignee: Jonathan Thomas
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2011-05-09 06:24 UTC by Ac17
Modified: 2011-05-26 19:59 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments
Howe Muon looks (42.64 KB, image/png)
2011-05-09 06:24 UTC, Ac17
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Ac17 2011-05-09 06:24:58 UTC
Created attachment 59790 [details]
Howe Muon looks

Version:           4.6 (using KDE 4.6.2) 
OS:                Linux

Muon can´t close, I´ve to restart the computer
I have autoinstall of security-updates and when I click the upgrade button in Muon there was just that. Offcourse there can only be one upgrade at the time but after it say there was something going on, its just stop. The closebutton don´t work but maximize and minimize do.

Reproducible: Didn't try



Expected Results:  
closed
Comment 1 Jonathan Thomas 2011-05-10 07:50:27 UTC
What version of Muon is this?
Comment 2 Ac17 2011-05-12 00:45:02 UTC
Muon pakethanterare
Version 1.1.2 "Bullish Bandril"
Använder KDE Development Platform 4.6.2 (4.6.2)
Comment 3 Ac17 2011-05-12 00:46:37 UTC
Muon pakethanterare
Version 1.1.2 "Bullish Bandril"
Använder KDE Development Platform 4.6.2 (4.6.2)
Comment 4 Jonathan Thomas 2011-05-26 19:54:44 UTC
Git commit c49aa73d82a1afdfcbbf9895133744f9c1e2be35 by Jonathan Thomas.
Committed on 26/05/2011 at 19:53.
Pushed by jmthomas into branch 'master'.

Fix some situations where APT errors would prevent Muon from being able to quit.
Also fix erronous toolbar re-enablement that resulted from CommitErrors.

BUG:272833

M  +7    -2    libmuon/MuonMainWindow.cpp     

http://commits.kde.org/muon/c49aa73d82a1afdfcbbf9895133744f9c1e2be35
Comment 5 Jonathan Thomas 2011-05-26 19:59:48 UTC
Git commit d0bc5d9e13276fad316c58261bc7d13ac4940cce by Jonathan Thomas.
Committed on 26/05/2011 at 19:53.
Pushed by jmthomas into branch '1.1'.

Backport the fix for some situations where APT errors would prevent Muon from being able to quit.
Also fix erronous toolbar re-enablement that resulted from CommitErrors.

BUG:272833

Conflicts:

	libmuon/MuonMainWindow.cpp

M  +8    -2    libmuon/MuonMainWindow.cpp     

http://commits.kde.org/muon/d0bc5d9e13276fad316c58261bc7d13ac4940cce