Backport the fix for some situations where APT errors would prevent Muon from being able to quit. Also fix erronous toolbar re-enablement that resulted from CommitErrors.

BUG:272833

Conflicts:

	libmuon/MuonMainWindow.cpp